@@ -718,6 +718,9 @@ ModSummary.lm <- function(x, conf.level=0.95, ...){
     sigma         = sigma,
     r.squared     = r.squared,
     adj.r.squared = adj.r.squared,
+    "n vars" = length(attr(x$terms, "term.labels")),
+    "n coef" = nrow(smrx$coefficients), 
+    
     F             = fstatistic[[1]],
     numdf         = fstatistic[[2]],
     dendf         = fstatistic[[3]],
@@ -755,6 +758,8 @@ ModSummary.lmrob <- function (x, conf.level = 0.95, ...) {
                                                    df[[3]], lower.tail = FALSE))), N = nobs(x),
               #           logLik = logLik(x), deviance = deviance(x), AIC = AIC(x),
               logLik = NA, deviance = NA, AIC = NA,
+              "n vars" = length(attr(x$terms, "term.labels")),
+              "n coef" = nrow(smrx$coefficients), 
               BIC = NA, MAE = MAE(x = fit, ref = y), MAPE = MAPE(x = fit, ref = y),
               MSE = MSE(x = fit, ref = y), RMSE = RMSE(x = fit, ref = y))
 
@@ -813,6 +818,9 @@ ModSummary.glm <- function(x, conf.level=0.95, ...){
 
     statsx <- c(statsx,
              "N" =  nobs(x),
+             "n vars" = length(attr(x$terms, "term.labels")),
+             "n coef" = nrow(x$coefficients),
+             "numdf" = attr(logLik(x), "df"),
              "Kendall Tau-a" = unname(statsy["taua"]),
              "Somers Delta" = unname(statsy["somers_r"]),
              "Gamma" = unname(statsy["gamma"]),
@@ -826,6 +834,9 @@ ModSummary.glm <- function(x, conf.level=0.95, ...){
 
     statsx <- c(statsx[],
              "N" =  nobs(x),
+             "n vars" = length(attr(x$terms, "term.labels")),
+             "n coef" = length(x$coefficients),
+             "numdf" = attr(logLik(x), "df"),
              "MAE" = MAE(pred, model.response(x$model)),
              "MAPE" = MAPE(pred, model.response(x$model)),
              "MSE" = MSE(pred, model.response(x$model)),
@@ -848,6 +859,8 @@ ModSummary.OddsRatio <- function(x, conf.level=0.95, ...){
 
   statsx <- x$PseudoR2
   statsx <- c(N = x$nobs,
+              "n vars" = length(x$terms),
+              "n coef" = nrow(x$res), 
               statsx[],
               "BrierScore" = x$BrierScore)
 
@@ -932,7 +945,7 @@ TMod <- function(..., FUN = NULL){
 
   row.names(mm) <- mm$stat
   mm <- mm[match(c("r.squared", "adj.r.squared","sigma","logLik","logLik0","G2","deviance",
-             "AIC","BIC","numdf","dendf","N","F","p","MAE","MAPE","MSE","RMSE","McFadden",
+             "AIC","BIC","numdf","dendf","N","n vars","n coef","F","p","MAE","MAPE","MSE","RMSE","McFadden",
              "McFaddenAdj","Nagelkerke","CoxSnell","Kendall Tau-a","Somers Delta","Gamma","Brier","C"),
              rownames(mm))
            , ]
@@ -1024,8 +1037,8 @@ print.TMod <- function(x, digits=3, na.form = "-", ...){
   x2 <- x[[2]]
   x[[2]][, -1] <- Format(x[[2]][, -1], digits=digits, na.form = na.form)
 
-  x[[2]][x[[2]]$stat %in% c("numdf", "dendf", "N"), -1] <-
-    Format(x2[x[[2]]$stat %in% c("numdf", "dendf", "N"), -1], digits=0, na.form=na.form)
+  x[[2]][x[[2]]$stat %in% c("numdf", "dendf", "N", "n vars", "n coef"), -1] <-
+    Format(x2[x[[2]]$stat %in% c("numdf", "dendf", "N", "n vars", "n coef"), -1], digits=0, na.form=na.form)
 
   m <- rbind(x[[1]],  setNames(c("---", rep("", ncol(x[[1]]) -1)), colnames(x[[1]])),
              setNames(x[[2]], colnames(x[[1]])))
