@@ -13,7 +13,9 @@ UPDATED FUNCTIONS:
   * Desc.table() will also report relative risks for rows when verbose is 
     set to 3.
   * Documentation and github integration have been improved (thanks to 
-    Vilmantas Gegzna).  
+    Vilmantas Gegzna).
+  * TMod() will report number of variables in the model and the
+    number of estimated coefficients.
     
 BUGFIXES:
   * PasswordDlg() gets all its required arguments back again.    
